--- a/hauptteil.tex
+++ b/hauptteil.tex
@@ -20,7 +20,7 @@ In den TV--Werbespots von Google und Apple werden Verbraucher gezielt auf entspr
 
 \label{probleme}
 Neben dem offensichtlichen Nutzen des \ac{WWW} bringt die Entwicklung des Webs auch negative Auswirkungen auf die Gesellschaft. 
-Dies äußert sich mit der Besorgnis von 60\% der Nutzer über die im Internet möglicherweise verfügbaren persönlichen Daten\footnote{vgl. \cite{d21}, Seite 6}. Bei der Nutzung von Webdiensten der öffentlichen Verwaltung haben 65\% der Befragten Angst vor Datendiebstahl, und 73\% der Deutschen haben ein starkes Interesse daran, wie Behörden mit den Daten der Bürger umgeht\footnote{vgl. \cite{d21gov}, Seite 9 bzw. Seite 34}.  Sowohl fiktive\footnote{vgl. \cite{orwell}} also auch reale\footnote{vgl. \cite{wp:stasi}} Unrechtsstaaten basieren auf der intensiven Erfassung und Auswertung von personenbezogener Daten der Bürger, was entsprechende Befürchtungen nährt und erklärt.
+Dies äußert sich in der Besorgnis von 60\% der Nutzer über die im Internet möglicherweise verfügbaren persönlichen Daten\footnote{vgl. \cite{d21}, Seite 6}. Bei der Nutzung von Webdiensten der öffentlichen Verwaltung haben 65\% der Befragten Angst vor Datendiebstahl, und 73\% der Deutschen haben ein starkes Interesse daran, wie Behörden mit den Daten der Bürger umgeht\footnote{vgl. \cite{d21gov}, Seite 9 bzw. Seite 34}.  Sowohl fiktive\footnote{vgl. \cite{orwell}} also auch reale\footnote{vgl. \cite{wp:stasi}} Unrechtsstaaten basieren auf der intensiven Erfassung und Auswertung von personenbezogener Daten der Bürger, was entsprechende Befürchtungen nährt und erklärt.
 
 Man kann davon ausgehen, dass mit weiter wachsenden Datenmengen, aber auch durch entsprechenden Wachstum an generierten und erfassten Informationen und Wissen sowohl die positiven Erwartungen als auch die Befürchtungen und Ängste in der Bevölkerung zunehmen werden.
 
@@ -30,7 +30,7 @@ Schon heute haben Unternehmen erkannt, dass es nicht ausreicht, immer mehr Daten
 
 Schon in der Vergangenheit haben Fortschritte in der Daten-- und Informationsbearbeitung erhebliche Auswirkungen auf die Wirtschaft gehabt. So war die Entwicklung der Telegraphie ein wichtiger Schritt für die Meteorologie, da hiermit zeitnahe Datensammlung und Auswertung möglich wurde. Als Resultat waren Wettervorhersagen für die Schiff{}fahrt möglich. Mit steigender Datenmenge und immer noch wachsender Verarbeitungsgeschwindigkeit werden im Zusammenspiel mit dem Fortschritten des semantischen Webs auch in anderen Bereichen immer treffendere Analysen und Vorhersagen möglich werden. 
 
-Auch jenseits von Vorhersagen sind durch die Datenverarbeitung im großen Stil neue bzw. verbesserte Produkte möglich. Als Beispiele sind hier die Jacht „BMW Oracle“ zu nennen, die durch Datenverarbeitung in Echtzeit zu einem hocheffizienten Segelschiff wurde\footnote{vgl. \cite{laudon}, Seite 59f}, Herzschrittmacher, die Patientendaten beobachten um nur bei Bedarf als Taktgeber oder Defibrilator zu handeln\footnote{vgl. \cite{froeling}, Seite 146} oder der ganze Bereich der Ferndiagnostik und --wartung bei Maschinen und auch Menschen\footnote{Internet of Things und Ubiquitous Computing bzw. Life Tracking}.
+Auch jenseits von Vorhersagen sind durch die Datenverarbeitung im großen Stil neue bzw. verbesserte Produkte möglich. Als Beispiele ist hier die Jacht „BMW Oracle“ zu nennen, die durch Datenverarbeitung in Echtzeit zu einem hocheffizienten Segelschiff wurde\footnote{vgl. \cite{laudon}, Seite 59f}. Herzschrittmacher, die Patientendaten beobachten um nur bei Bedarf als Taktgeber oder Defibrilator zu handeln\footnote{vgl. \cite{froeling}, Seite 146} sowie der ganze Bereich der Ferndiagnostik und --wartung bei Maschinen und auch Menschen\footnote{Stichwort \ac{IoT}} sind weitere Produkte, die nur durch intensive Daten-- und Informationsverarbeitung möglich bzw. sinnvoll werden.
 
 Die wie auf Seite \pageref{probleme} beschriebenen, weit verbreiteten und zum Teil großen Befürchtungen stellen Herausforderungen an die Unternehmen dar. Neue Technologien und Anwendungen ebendieser sollten so entworfen und kommuniziert werden, dass Verbrauchen ihnen vertrauen können.
 
@@ -41,9 +41,9 @@ Es sind also auch erhebliche Auswirkungen auf die Wirtschaft zu erwarten, sowohl
 
 Daten und Öl bilden die Grundlage für Produkte bzw. Dienstleistungen. Große Teile der Wirtschaft sind direkt von ihnen abhängig. Noch größer dürfte die indirekte Abhängigkeit vom Öl sein, die sich durch sämtliche Branchen und auch auf private Haushalte erstreckt. Eine solche Abhängigkeit ist für Daten bereits zu erahnen.
 
-Rohöl kann als Roh--, Hilfs-- und Betriebsstoff bei der Erzeugung unterschiedlichster Produktarten wie z.B. Kunststoff, Schmierstoffe, Kosmetika oder Treibstoffe. Gleiches gilt für Daten: Oft sind die mit Hilfe künstlicher Intelligenz\footnote{im Englischen Wortsinn von Informationsbeschaffung} erzielten Informationen direkt das gewünschte Produkt. Andererseits könnten diese Informationen auch nur wie ein Betriebsstoff dafür sorgen, dass andere Prozesse besser ablaufen.
+Rohöl kann als Roh--, Hilfs-- und Betriebsstoff bei der Erzeugung unterschiedlichster Produktarten wie z.B. Kunststoff, Schmierstoffe, Kosmetika oder Treibstoffe. Gleiches gilt für Daten: Oft sind die mit Hilfe künstlicher Intelligenz\footnote{im Englischen Wortsinn von Informationsbeschaffung} erzielten Informationen direkt das gewünschte Produkt. Diese Informationen können aber auch nur wie ein Betriebsstoff dafür sorgen, dass andere Prozesse besser ablaufen.
 
-Auch die Entwicklung der zur Verfügung stehenden Menge stellt sowohl beim Öl als auch bei Daten ein Problem dar: Während Ölvorkommen endlich sind, und somit nach Alternativen geforscht werden muss, werden Daten in ihrer Unendlichkeit\footnote{Mit jedem erfasstem Datum entstehen weitere erfassbare Daten, wie z.B. Speicherort und Erhebungszeitpunkt} mit steigender Menge schwerer zu Verarbeiten. Somit muss die Wirtschaft lernen mit weniger Öl, aber mit mehr Daten zurechtzukommen.
+Auch die Entwicklung der zur Verfügung stehenden Menge stellt sowohl beim Öl als auch bei Daten ein Problem dar: Während Ölvorkommen endlich sind, und somit nach Alternativen geforscht werden muss, werden Daten in ihrer Unendlichkeit\footnote{Mit jedem erfasstem Datum entstehen weitere erfassbare Daten, wie z.B. Speicherort und Erhebungszeitpunkt} mit steigender Menge schwerer zu verarbeiten. Somit muss die Wirtschaft lernen mit weniger Öl, aber mit immer mehr Daten zurechtzukommen.
 
 Eine weitere Gemeinsamkeit zeigt sich bei historischer Betrachtung: Sowohl Öl als auch Daten und ihre Verarbeitung sind schon lange vor ihrer industriellen Nutzung genutzt worden. Dies gilt für Rohölprodukte (z.B. als Bau und Brennstoff\footnote{vgl. \cite{pressler}, Abschnitt 2.1}) als auch für Daten (z.B. zur Wettervorhersage durch den hundertjärigen Kalender\footnote{vgl. \cite{dwd} bzw. \cite{knauer100}, Seite 1: „Erklärungen über die Beschaffenheit, Gestalt und Bewegung unserer Erde und die anderen Weltkörper, über die besonderen Naturerscheinungen, und über das ganze Weltwissen überhaupt; dann über die Witterungsvorhersagung nach den besten Bauernregeln und sichersten Wetteranzeigen,…“} oder die frühen Verschlüselungstechniken\footnote{\cite{suetonius}, Abschnitt 56.6: „… wenn etwas Geheimes zu überbringen war, schrieb er in Zeichen, das heißt, er ordnete die Buchstaben so, dass kein Wort gelesen werden konnte: Um diese zu lesen, tauscht man den vierten Buchstaben, also D für A aus und ebenso mit den restlichen.“}). Jedoch bedurfte es einem bestimmten Stand der Technik, ab dem die Einsatzzwecke dann sprunghaft anstiegen.
 
@@ -54,4 +54,4 @@ Von Politikern auf verschiedenen Ebenen wir der Themenbereich \buzz{Big Data} al
 
 Das Umwelt--Bundesamt kümmert sich um Nachhaltigkeit nicht nur bei der Hardware, sondern auch bei Software und den erhobenen Daten. „Wachsende Datenmengen und überdimensionierte Programme erfordern den beständigen Ausbau von IT-Netzen, Datenspeichern und Rechenkapazitäten. Höchste Zeit also, die Diskussion über Nachhaltige Software anzustoßen.“\footnote{\cite{fns}} 
 
-Somit werden in der Politik in der Politik die gleichen Ziele verfolgt wie in der Ölbranche: Sicherung bzw. Steigerung des Marktanteils, Erzielung von möglichst positiven Effekten auf den Arbeitsmarkt sowie die bestmögliche Vermeidung der negativen Auswirkungen auf Umwelt und Gesellschaft.
+Somit werden in der Politik die gleichen Ziele verfolgt wie im Bezug auf dieÖlbranche: Sicherung bzw. Steigerung des Marktanteils, Erzielung von möglichst positiven Effekten auf den Arbeitsmarkt sowie die bestmögliche Vermeidung der negativen Auswirkungen auf Umwelt und Gesellschaft.
