--- a/literatur.bib
+++ b/literatur.bib
@@ -2,83 +2,94 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Stefan Waidele at 2014-11-11 23:28:25 +0100 
+%% Created for Stefan Waidele at 2014-11-12 09:45:15 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@mastersthesis{sprejz,
+	Author = {Mich{\`e}le Sprejz},
+	Date-Added = {2014-11-12 06:54:07 +0000},
+	Date-Modified = {2014-11-12 07:59:15 +0000},
+	Month = {12},
+	School = {TU Dresden},
+	Title = {{Extraktion und Klassifikation von bewerteten Produktfeatures auf Webseiten}},
+	Type = {{Diplomarbeit}},
+	Year = {2011}}
+
 @misc{fns,
 	Author = {Marina K{\"o}hn},
 	Date-Added = {2014-11-11 22:10:30 +0000},
-	Date-Modified = {2014-11-11 22:12:01 +0000},
+	Date-Modified = {2014-11-12 07:54:24 +0000},
 	Howpublished = {\url{http://oekotop100.de/software/wp-content/uploads/2014/10/Einladung_Fachgespraech_Nachhaltige_Software_am_28-11-2014.pdf}, abgerufen am 11.11.2014},
 	Month = {11},
-	Title = {Einladung zum Fachgespr{\"a}ch Nachhaltige Software},
+	Title = {{Einladung zum Fachgespr{\"a}ch Nachhaltige Software}},
 	Year = {2014}}
 
 @article{bd25,
 	Author = {Peter--Michael Ziegler},
 	Date-Added = {2014-11-11 21:50:41 +0000},
-	Date-Modified = {2014-11-11 22:28:23 +0000},
+	Date-Modified = {2014-11-12 07:25:59 +0000},
 	Journal = {{c't Magazin, Heft 24 vom 01.11.}},
 	Month = {11},
 	Pages = {52},
-	Title = {2,5 Milliarden Euro f{\"u}r die Big--Data--Forschung},
+	Title = {{2,5 Milliarden Euro f{\"u}r die Big--Data--Forschung}},
 	Year = {2014}}
 
 @book{froeling,
 	Address = {Stuttgart},
-	Author = {Gerd Fr{\"o}hling AND J{\"o}rg Carlson},
+	Author = {{Gerd Fr{\"o}hling et al.}},
 	Date-Added = {2014-11-11 19:02:14 +0000},
-	Date-Modified = {2014-11-11 21:17:53 +0000},
-	Publisher = {Georg Thieme Verlag},
-	Title = {Herzschrittmacher-- und Defibrilator--Therapie},
+	Date-Modified = {2014-11-12 07:55:11 +0000},
+	Publisher = {Georg Thieme Verlag, Stuttgart},
+	Title = {{Herzschrittmacher-- und Defibrilator--Therapie}},
 	Year = {2006}}
 
 @book{laudon,
 	Address = {London},
-	Author = {Kenneth Laudon AND Jane Laudon},
+	Author = {{Kenneth C. Laudon et al.}},
 	Date-Added = {2014-11-11 18:51:45 +0000},
-	Date-Modified = {2014-11-11 21:16:55 +0000},
+	Date-Modified = {2014-11-12 07:57:23 +0000},
 	Edition = {tenth, international},
 	Publisher = {Pearson},
-	Title = {Essentials of Management Information Systems},
+	Title = {{Essentials of Management Information Systems}},
 	Year = {2013}}
 
 @book{suetonius,
 	Author = {Suetonius},
 	Date-Added = {2014-11-11 18:33:46 +0000},
-	Date-Modified = {2014-11-11 18:34:42 +0000},
+	Date-Modified = {2014-11-12 07:59:24 +0000},
 	Editor = {Ihm, Max},
 	Publisher = {in aedibvs B. G. Tevbneri},
-	Title = {Divus Julius},
+	Title = {{Divus Julius}},
 	Year = {1908}}
 
 @misc{dwd,
 	Author = {{Deutscher Wetterdienst (Hrsg.)}},
 	Date-Added = {2014-11-11 18:26:55 +0000},
-	Date-Modified = {2014-11-11 18:43:01 +0000},
+	Date-Modified = {2014-11-12 07:34:23 +0000},
 	Howpublished = {\url{http://www.deutscher-wetterdienst.de/lexikon/index.htm?ID=H&DAT=Hundertjaehriger_Kalender}, abgerufen am 11.11.2014},
-	Title = {Hundertj{\"a}hriger Kalender},
+	Title = {{Hundertj{\"a}hriger Kalender}},
 	Year = {2014}}
 
 @misc{knauer100,
 	Author = {Moriz Knauer},
 	Date-Added = {2014-11-11 17:59:12 +0000},
-	Date-Modified = {2014-11-11 18:39:00 +0000},
-	Howpublished = {\url{http://www.meinbezirk.at/mauterndorf/kultur/grosser-hundertjaehriger-kalender-1800-1900-innenseite-1-m4081937,543393.html}, abgerufen am 11.11.2014},
+	Date-Modified = {2014-11-12 08:45:14 +0000},
+	Howpublished = {\url{http://media05.regionaut.meinbezirk.at/2013/04/20/4081937_web.jpg}, abgerufen am 11.11.2014},
 	Publisher = {Franz Ferst'sche Buchhandlung, Graz},
-	Title = {Gro{\ss}er hundertj{\"a}hriger Kalender f{\"u}r das neunzehnte Jahrhundert}}
+	Title = {{Gro{\ss}er hundertj{\"a}hriger Kalender f{\"u}r das neunzehnte Jahrhundert}}}
 
 @techreport{pressler,
 	Author = {Carola Pre{\ss}ler},
 	Date-Added = {2014-11-11 17:39:28 +0000},
-	Date-Modified = {2014-11-11 18:49:14 +0000},
+	Date-Modified = {2014-11-12 07:59:05 +0000},
 	Institution = {Philipps--Universit{\"a}t Marburg},
 	Month = {01},
-	Title = {{Protokoll zum Experimentalvortrag „Erd{\"o}l und Erd{\"o}lprodukte``}},
+	Title = {{Erd{\"o}l und Erd{\"o}lprodukte}},
+	Type = {{Protokoll zum Experimentalvortrag}},
 	Year = {2000}}
 
 @misc{okg:tierpark,
@@ -93,119 +104,119 @@
 @misc{wp:stasi,
 	Author = {Wikipedia},
 	Date-Added = {2014-11-08 09:54:01 +0000},
-	Date-Modified = {2014-11-08 09:58:19 +0000},
-	Howpublished = {\url{http://de.wikipedia.org/wiki/Ministerium_f%C3%BCr_Staatssicherheit}},
-	Title = {Ministerium f{\"u}r Staatssicherheit},
+	Date-Modified = {2014-11-12 08:04:56 +0000},
+	Howpublished = {\url{http://de.wikipedia.org/wiki/Ministerium_f%C3%BCr_Staatssicherheit}, abgerufen am 11.11.2014},
+	Title = {{Ministerium f{\"u}r Staatssicherheit}},
 	Year = {2014}}
 
 @book{orwell,
 	Author = {George Orwell},
 	Date-Added = {2014-11-08 09:45:17 +0000},
-	Date-Modified = {2014-11-08 09:46:52 +0000},
-	Publisher = {{Secker \& Warburg}},
-	Title = {Nineteen Eighty-Four},
+	Date-Modified = {2014-11-12 07:58:32 +0000},
+	Publisher = {{Secker \& Warburg, London}},
+	Title = {{Nineteen Eighty-Four}},
 	Year = {1949}}
 
 @misc{odnsbi,
 	Author = {Dan Hubbart},
 	Date-Added = {2014-11-08 06:32:26 +0000},
-	Date-Modified = {2014-11-08 06:33:44 +0000},
+	Date-Modified = {2014-11-12 07:57:41 +0000},
 	Howpublished = {\url{http://blog.opendns.com/2012/05/15/enough-about-big-data-lets-talk-big-information/}, abgerufen am 08.11.2014},
 	Month = {05},
 	Publisher = {OpenDNS},
-	Title = {Enough about Big Data. Let's talk Big Information},
+	Title = {{Enough about Big Data. Let's talk Big Information}},
 	Year = {2012}}
 
 @book{d21gov,
 	Author = {{Initiative D21 et al. (Hrsg.)}},
 	Date-Added = {2014-11-08 06:23:00 +0000},
-	Date-Modified = {2014-11-11 22:21:36 +0000},
-	Publisher = {Initiative D21 e.V.},
-	Title = {eGovernment Monitor 2014},
+	Date-Modified = {2014-11-12 07:53:40 +0000},
+	Publisher = {Initiative D21 e.V., Berlin},
+	Title = {{eGovernment Monitor 2014}},
 	Year = {2014}}
 
 @misc{bigdikw,
 	Author = {Tom Graves},
 	Date-Added = {2014-11-07 23:51:13 +0000},
-	Date-Modified = {2014-11-07 23:52:09 +0000},
+	Date-Modified = {2014-11-12 07:53:14 +0000},
 	Howpublished = {\url{http://weblog.tetradian.com/2014/03/04/big-data-big-information-big-knowledge/}, abgerufen am 08.11.2014},
 	Month = {03},
-	Title = {Big-data, big-information, big-knowledge},
+	Title = {{Big-data, Big-Information, Big-Knowledge}},
 	Year = {2014}}
 
 @misc{faz:inng,
 	Author = {Holger Schmidt},
 	Date-Added = {2014-11-07 23:48:10 +0000},
-	Date-Modified = {2014-11-07 23:49:04 +0000},
+	Date-Modified = {2014-11-12 07:53:54 +0000},
 	Howpublished = {\url{http://www.faz.net/aktuell/wirtschaft/netzwirtschaft/web-3-0-das-internet-der-naechsten-generation-1796817.html}, abgerufen am 08.11.2014},
 	Month = {05},
-	Title = {Das Internet der n{\"a}chsten Generation},
+	Title = {{Das Internet der n{\"a}chsten Generation}},
 	Year = {2009}}
 
 @misc{w3cstack,
 	Author = {Steve Bratt},
 	Date-Added = {2014-11-07 23:27:01 +0000},
-	Date-Modified = {2014-11-07 23:33:36 +0000},
+	Date-Modified = {2014-11-12 07:59:44 +0000},
 	Howpublished = {\url{http://www.w3.org/2007/Talks/0130-sb-W3CTechSemWeb/#(24)}, abgerufen am 07.11.2014},
 	Month = {01},
-	Title = {Semantic Web: Linked Data on the Web},
+	Title = {{Semantic Web: Linked Data on the Web}},
 	Year = {2007}}
 
 @book{d21,
-	Address = {Berlin},
 	Author = {{Initiative D21 et al. (Hrsg.)}},
 	Date-Added = {2014-11-07 22:25:48 +0000},
-	Date-Modified = {2014-11-11 18:47:14 +0000},
-	Publisher = {Initiative D21 e.V.},
-	Title = {Die Entwicklung der digitalen Gesellschaft in Deutschland},
+	Date-Modified = {2014-11-12 08:06:31 +0000},
+	Publisher = {Initiative D21 e.V., Berlin},
+	Title = {{Die Entwicklung der digitalen Gesellschaft in Deutschland}},
 	Year = {2014},
 	Bdsk-Url-1 = {http://www.initiatived21.de/wp-content/uploads/2014/11/141103_digitalindex_web.pdf}}
 
 @book{web3pol,
 	Author = {Simon Pont},
 	Date-Added = {2014-11-05 18:48:56 +0000},
-	Date-Modified = {2014-11-11 18:48:38 +0000},
+	Date-Modified = {2014-11-12 08:04:13 +0000},
 	Edition = {Web},
 	Month = {11},
-	Publisher = {Kogan Page},
-	Title = {The Better Mousetrap},
+	Publisher = {Kogan Page, London},
+	Title = {{The Better Mousetrap}},
 	Year = {2012}}
 
 @book{web3market,
 	Author = {Michael Tasner},
 	Date-Added = {2014-11-05 18:39:00 +0000},
-	Date-Modified = {2014-11-07 23:32:59 +0000},
+	Date-Modified = {2014-11-12 08:02:46 +0000},
 	Edition = {Web},
 	Month = {07},
-	Publisher = {FT Press},
-	Title = {The Limiting Factors of Web 2.0 and How Web 3.0 Is Different},
+	Publisher = {FT Press, Upper Saddle River, NJ, USA},
+	Title = {{The Limiting Factors of Web 2.0 and How Web 3.0 Is Different}},
 	Year = {2010},
 	Bdsk-Url-1 = {http://my.safaribooksonline.com/book/sales-and-marketing/9780132487245}}
 
 @misc{tsp:tolksdorf,
 	Author = {Robert Tolksdorf},
 	Date-Added = {2014-11-05 18:26:33 +0000},
-	Date-Modified = {2014-11-05 18:27:32 +0000},
+	Date-Modified = {2014-11-12 07:52:27 +0000},
 	Howpublished = {\url{http://www.tagesspiegel.de/zeitung/web-3-0-die-dimension-der-zukunft/1028324.html}, abgerufen am 05.11.2014},
 	Month = {08},
 	Rating = {5},
-	Title = {Web 3.0 -- die Dimension der Zukunft},
+	Title = {{Web 3.0 -- die Dimension der Zukunft}},
 	Year = {2007}}
 
 @misc{nyt:markoff,
 	Author = {John Markoff},
 	Date-Added = {2014-11-05 18:15:13 +0000},
-	Date-Modified = {2014-11-05 18:17:46 +0000},
+	Date-Modified = {2014-11-12 07:57:31 +0000},
 	Howpublished = {\url{http://www.nytimes.com/2006/11/12/business/12web.html?pagewanted=all}, abgerufen am 05.11.2014},
 	Journal = {The New York Times},
 	Month = {11},
 	Rating = {5},
-	Title = {Entrepreneurs See a Web Guided by Common Sense},
+	Title = {{Entrepreneurs See a Web Guided by Common Sense}},
 	Year = {2006}}
 
 @misc{wp:semantik,
+	Author = {Wikipedia},
 	Date-Added = {2014-11-05 17:28:56 +0000},
-	Date-Modified = {2014-11-05 17:43:15 +0000},
+	Date-Modified = {2014-11-12 07:25:20 +0000},
 	Howpublished = {\url{http://de.wikipedia.org/wiki/Semantik}, abgerufen am 05.11.2014},
 	Month = {07},
 	Publisher = {Wikipedia},
@@ -216,37 +227,37 @@
 @book{alkhatib,
 	Author = {Ghazi Alkhatib},
 	Date-Added = {2014-11-04 07:33:43 +0000},
-	Date-Modified = {2014-11-04 07:34:29 +0000},
+	Date-Modified = {2014-11-12 07:52:49 +0000},
 	Publisher = {IGI Global},
-	Title = {Models for Capitalizing on Web Engineering Advancements},
+	Title = {{Models for Capitalizing on Web Engineering Advancements} },
 	Year = {2012}}
 
 @article{taylor,
 	Annote = {https://www.asis.org/Publications/JASIS/Best_Jasist/1982Taylor.pdf},
 	Author = {Robert S. Taylor},
 	Date-Added = {2014-11-03 21:44:34 +0000},
-	Date-Modified = {2014-11-05 18:57:18 +0000},
+	Date-Modified = {2014-11-12 07:59:32 +0000},
 	Journal = {Journal of the American Society for Information Science},
 	Pages = {341--346},
-	Title = {Value--Added Processes in the Information Life Cycle},
+	Title = {{Value--Added Processes in the Information Life Cycle}},
 	Year = {1982}}
 
 @book{kfk,
 	Annote = {http://www.wissenschaftsforschung.de/JB00_9-88.pdf},
 	Author = {Klaus Fuchs--Kittowski},
 	Date-Added = {2014-11-03 21:08:55 +0000},
-	Date-Modified = {2014-11-11 18:45:20 +0000},
+	Date-Modified = {2014-11-12 07:57:01 +0000},
 	Number = {2. Auflage},
 	Publisher = {Gesellschaft f{\"u}r Wissenschaftsforschung},
-	Title = {Wissens--Ko--Produktion --- Organisationsinformatik},
+	Title = {{Wissens--Ko--Produktion --- Organisationsinformatik}},
 	Year = {2000}}
 
 @book{pnik,
 	Author = {Paul Nikodemus},
 	Date-Added = {2014-11-03 20:31:18 +0000},
-	Date-Modified = {2014-11-05 18:56:39 +0000},
-	Publisher = {Cuvillier Verlag},
-	Title = {Wissensmanagement und Innovation},
+	Date-Modified = {2014-11-12 07:58:44 +0000},
+	Publisher = {Cuvillier Verlag, G{\"o}ttingen},
+	Title = {{Wissensmanagement und Innovation}},
 	Year = {2005}}
 
 @book{gartner2014,
