--- a/vorlage.tex
+++ b/vorlage.tex
@@ -147,7 +147,8 @@
 \setcounter{page}{\theromanPagenumber}
 %\addcontentsline{toc}{section}{Literatur-- und Quellenverzeichnis}
 \renewcommand{\refname}{Literatur-- und Quellenverzeichnis}
-\bibliographystyle{apalike}
+%\bibliographystyle{apalike}
+\bibliographystyle{alpha}
 \bibliography{literatur}
 \onehalfspacing
 \clearpage
